# mirage

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/mirage-bench/: Cargo.toml
crates/mirage-bench/src/: lib.rs  oracle.rs  render.rs  report.rs  runner.rs  scorer.rs  task.rs
crates/mirage-bench/src/tasks/: gsm_toy.rs  mod.rs
crates/mirage-bench/tests/: e2e_m1_1.rs  gate_triggers_on_drift.rs
crates/mirage-core/: Cargo.toml
crates/mirage-core/src/: context.rs  control.rs  decision.rs  lib.rs  plan.rs  traits.rs
crates/mirage-kvcache/: Cargo.toml
crates/mirage-kvcache/src/: lib.rs
crates/mirage-predictor/: Cargo.toml
crates/mirage-predictor/src/: lib.rs
crates/mirage-profiler/: Cargo.toml
crates/mirage-profiler/src/: lib.rs
crates/mirage-replay/: Cargo.toml
crates/mirage-replay/src/: lib.rs
crates/mirage-scheduler/: Cargo.toml
crates/mirage-scheduler/src/: lib.rs
crates/mirage-scheduler/tests/: determinism.rs  e2e_phase0.rs  invariants_proptest.rs
crates/mirage-sim/: Cargo.toml
crates/mirage-sim/src/: backend.rs  hw.rs  lib.rs  model.rs
crates/mirage-telemetry/: Cargo.toml
crates/mirage-telemetry/src/: frame.rs  lib.rs
