[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pmzomo/mirage"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
smallvec = { version = "1", features = ["serde"] }
proptest = "1"
rand_chacha = "0.3"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
